pulse/test/bug-reports/Bug278.fst.output.expected
* Info at Bug278.fst(31,0-38,1):
  - Expected failure:
  - Tactic failed
  - Internal error: unexpected unresolved (universe) uvar in deep_compress: 21

